[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["pragyanbhatt <pragyanbhatt9999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.69.0"
langgraph = "^0.3.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
